--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,31 +1,36 @@
 body {
   background-color: #f2f2f2; }
 
-.navbar-custom-bg {
-  background-color: #e3f2fd; }
+.navbar-custom {
+  background-color: #ffffff;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1), 0 3px 6px rgba(0, 0, 0, 0.15);
+  justify-content: left; }
 
 #sidebar {
   width: 210px;
   height: 100%;
   position: fixed;
-  background: #424a5d;
+  background: #25CBF2;
   overflow-y: scroll;
   transition: .5s;
   -webkit-transition: .5s;
   -moz-transition: .5s; }
   #sidebar .logo {
     margin: 15px auto; }
+  #sidebar .sidebar-menu {
+    padding-top: 50px; }
   #sidebar ul, #sidebar li {
     list-style: none; }
-    #sidebar ul a, #sidebar li a {
-      border-left: 4px solid transparent;
-      display: block;
-      padding: 15px 30px 15px 30px;
-      white-space: nowrap; }
-      #sidebar ul a:hover, #sidebar li a:hover {
-        background-color: #ffffff;
-        border-left: 4px solid blue;
-        text-decoration: none; }
+  #sidebar a {
+    border-left: 5px solid transparent;
+    color: #ffffff;
+    display: block;
+    padding: 15px 30px 15px 30px;
+    white-space: nowrap; }
+    #sidebar a:hover {
+      background-color: #15BBE8;
+      border-left: 5px solid #007A9B;
+      text-decoration: none; }
   #sidebar ul.sub li {
     padding-left: 30px; }
 
@@ -68,7 +73,7 @@ body {
   width: 30px; }
 
 .custom-toggle span {
-  background: #626262;
+  background: #007A9B;
   border-radius: 9px;
   display: block;
   height: 3px;
@@ -78,11 +83,23 @@ body {
   width: 100%; }
 
 /* Icon 3 */
-.custom-toggle span:nth-child(1) {
+#nav-icon-open span:nth-child(1) {
   top: 0px; }
 
-.custom-toggle span:nth-child(2) {
+#nav-icon-open span:nth-child(2) {
   top: 9px; }
 
-.custom-toggle span:nth-child(3) {
+#nav-icon-open span:nth-child(3) {
   top: 19px; }
+
+#nav-icon-close span:nth-child(1) {
+  top: 15px;
+  -ms-transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg); }
+
+#nav-icon-close span:nth-child(2) {
+  top: 15px;
+  -ms-transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg); }
