--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,8 +11,8 @@ body {
   height: 100%;
   position: fixed;
   background: #25CBF2;
-  overflow-y: scroll;
   transition: .5s;
+  max-width: 210px;
   -webkit-transition: .5s;
   -moz-transition: .5s; }
   #sidebar .logo {
@@ -26,8 +26,10 @@ body {
     color: #ffffff;
     display: block;
     padding: 15px 30px 15px 30px;
+    text-overflow: ellipsis;
     white-space: nowrap; }
-    #sidebar a:hover {
+    #sidebar a:hover,
+    #sidebar a.active {
       background-color: #15BBE8;
       border-left: 5px solid #007A9B;
       text-decoration: none; }
