--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -105,3 +105,17 @@ body {
   -ms-transform: rotate(-45deg);
   -webkit-transform: rotate(-45deg);
   transform: rotate(-45deg); }
+
+.dropdown-toggle::after {
+  display: none;
+}
+
+.navbar {
+  max-height: 56px;
+}
+
+.img-avatar {
+  border-radius: 50%;
+  height: 40px;
+  width: 40px;
+}
