--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,4 +1,11 @@
 .card-notif {
     display: block;
-    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1), 0 3px 6px rgba(0, 0, 0, 0.15);
+    /* box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1), 0 3px 6px rgba(0, 0, 0, 0.15); */
+}
+
+.card,
+.card-header,
+.card-footer
+{
+    border-radius: 0px !important;
 }
