--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -16,7 +16,17 @@
 
 .card,
 .card-header,
-.card-footer
-{
+.card-footer {
     border-radius: 0px !important;
+}
+
+.note-card,
+.task-card {
+    transition-duration: 0.2s;
+}
+
+.note-card:hover,
+.task-card:hover {
+    /* margin-top: -3px; */
+    box-shadow: 0 5px 8px rgba(0, 0, 0, 0.1)
 }
