--- a/assets/css/welcome.css
+++ b/assets/css/welcome.css
@@ -79,7 +79,8 @@ h1 {
 
 .navbar {
   background: #ffffff !important;
-  border-bottom: 3px solid #38b5ff; }
+  border-bottom: 3px solid #38b5ff;
+  z-index: 99; }
   .navbar .nav-link {
     color: #1B1B1B !important;
     font-size: 16px;
@@ -93,6 +94,10 @@ h1 {
     margin: 3px;
     width: auto; }
 
+.first-fold-title {
+  color: #ffffff;
+  font-weight: bold; }
+
 .title {
   font-size: 36px;
   font-weight: bold;
@@ -104,15 +109,22 @@ h1 {
     width: 250px; }
 
 .products-section {
-  padding: 30px 0px 30px 0px; }
+  padding: 30px 20px 30px 20px; }
   .products-section .product-thumb {
-    padding: 10px 30px 10px 30px; }
+    height: auto;
+    padding: 10px 30px 10px 30px;
+    width: 180px; }
   .products-section p.product-name {
     font-size: 22px;
     font-weight: 500;
     margin-bottom: 0; }
   .products-section .sign-up-btn {
     width: 250px; }
+  .products-section .products-list {
+    list-style: disc; }
+  .products-section .products-list .products-nested-list{
+    list-style: circle;
+    padding-left: 30px; }
 
 .plans-section {
   background: #273d6a;
@@ -182,7 +194,8 @@ footer {
 
 @media screen and (max-width: 300px) {
   .first-fold {
-    background: linear-gradient(rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.7)), url("../images/home_bg_300.png") no-repeat left center fixed;
+    background: linear-gradient(rgba(56, 181, 255, .5), rgba(40, 61, 105, .8)), url(../images/home_bg_1920.png) no-repeat center center fixed;
+    /* background: linear-gradient(rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.7)), url("../images/home_bg_300.png") no-repeat left center fixed; */
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -190,7 +203,8 @@ footer {
 
 @media screen and (min-width: 301px) and (max-width: 600px) {
   .first-fold {
-    background: linear-gradient(rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.7)), url("../images/home_bg_600.png") no-repeat left center fixed;
+    background: linear-gradient(rgba(56, 181, 255, .5), rgba(40, 61, 105, .8)), url(../images/home_bg_1920.png) no-repeat center center fixed;
+    /* background: linear-gradient(rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.7)), url("../images/home_bg_600.png") no-repeat left center fixed; */
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -198,7 +212,8 @@ footer {
 
 @media screen and (min-width: 601px) and (max-width: 800px) {
   .first-fold {
-    background: linear-gradient(rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.7)), url("../images/home_bg_800.png") no-repeat center center fixed;
+    background: linear-gradient(rgba(56, 181, 255, .5), rgba(40, 61, 105, .8)), url(../images/home_bg_1920.png) no-repeat center center fixed;
+    /* background: linear-gradient(rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.7)), url("../images/home_bg_800.png") no-repeat center center fixed; */
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -206,7 +221,8 @@ footer {
 
 @media screen and (min-width: 801px) and (max-width: 1366px) {
   .first-fold {
-    background: linear-gradient(rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.7)), url("../images/home_bg_1366.png") no-repeat center center fixed;
+    background: linear-gradient(rgba(56, 181, 255, .5), rgba(40, 61, 105, .8)), url(../images/home_bg_1920.png) no-repeat center center fixed;
+    /* background: linear-gradient(rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.7)), url("../images/home_bg_1366.png") no-repeat center center fixed; */
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -214,7 +230,8 @@ footer {
 
 @media screen and (min-width: 1001px) {
   .first-fold {
-    background: linear-gradient(rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.7)), url("../images/home_bg_1920.png") no-repeat center center fixed;
+    background: linear-gradient(rgba(56, 181, 255, .5), rgba(40, 61, 105, .8)), url(../images/home_bg_1920.png) no-repeat center center fixed;
+    /* background: linear-gradient(rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.7)), url("../images/home_bg_1920.png") no-repeat center center fixed; */
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
