--- a/assets/css/welcome.css
+++ b/assets/css/welcome.css
@@ -3,7 +3,7 @@ html, body {
   height: 100%;
   width: 100%;
   font-family: 'Montserrat', sans-serif;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 300;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%; }
@@ -13,13 +13,13 @@ html, body {
   margin: 0 auto; }
 
 p {
-  font-size: 16px; }
+  font-size: 14px; }
 
 h1 {
   margin-bottom: 25px; }
 
 .modal {
-  font-size: 16px; }
+  font-size: 14px; }
   .modal label {
     font-weight: 400;
     text-transform: uppercase !important; }
@@ -72,17 +72,22 @@ h1 {
   border: 0;
   color: #ffffff;
   font-weight: 500;
-  padding: 5px 20px 5px 20px; }
+  padding: 5px 20px 5px 20px;
+  box-shadow: 0px 2px 6px rgba(0,0,0,0.3); }
   .sign-up-btn:focus {
     outline: none;
     box-shadow: 0 0 6px #273d6a; }
+  .sign-up-btn:hover {
+    background-color: #3679b2;
+    transition: ease-in-out .1s;
+  }
 
 .navbar {
-  background: #ffffff !important;
-  border-bottom: 3px solid #38b5ff;
+  background: #182540 !important;
+  /* border-bottom: 3px solid #38b5ff; */
   z-index: 99; }
   .navbar .nav-link {
-    color: #1B1B1B !important;
+    color: #ffffff !important;
     font-size: 16px;
     font-weight: 400;
     text-transform: uppercase; }
@@ -96,7 +101,8 @@ h1 {
 
 .first-fold-title {
   color: #ffffff;
-  font-weight: bold; }
+  font-weight: bold;
+  text-shadow: 2px 3px 4px rgba(0,0,0,0.5); }
 
 .title {
   font-size: 36px;
@@ -108,16 +114,26 @@ h1 {
   .first-fold .sign-up-btn {
     width: 250px; }
 
+.logo-shadow {
+  -webkit-filter: drop-shadow(2px 3px 4px rgba(0,0,0,0.5));
+  filter: drop-shadow(2px 3px 4px rgba(0,0,0,0.5)); }
+
+.home-thumb {
+  width: 85%; }
+
 .products-section {
   padding: 30px 20px 30px 20px; }
   .products-section .product-thumb {
     height: auto;
     padding: 10px 30px 10px 30px;
     width: 180px; }
-  .products-section p.product-name {
+  .product-details {
+    overflow: hidden;
+    position: relative; }
+  /* .products-section h2.product-name {
     font-size: 22px;
-    font-weight: 500;
-    margin-bottom: 0; }
+    font-weight: bold;
+    margin-bottom: 0; } */
   .products-section .sign-up-btn {
     width: 250px; }
   .products-section .products-list {
@@ -125,6 +141,24 @@ h1 {
   .products-section .products-list .products-nested-list{
     list-style: circle;
     padding-left: 30px; }
+  
+  .beta {
+    background: #66BB6A;
+    color: #ffffff;
+    font-size: 16px;
+    font-weight: 600;
+    height: 30px;
+    line-height: 30px;
+    letter-spacing: 2px;
+    position: absolute;
+    right: -60px;
+    text-align: center;
+    text-transform: uppercase;
+    top: 30px;
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+    width: 200px;
+  }
 
 .plans-section {
   background: #273d6a;
@@ -158,8 +192,6 @@ h1 {
     margin-bottom: 30px; }
   .plans-section .per-month-text {
     font-size: 12px; }
-  .plans-section ul li {
-    font-size: 16px; }
 
 .get-started-section {
   background: #ebebeb;
@@ -168,7 +200,7 @@ h1 {
     margin-bottom: 20px; }
 
 footer {
-  background: #273d6a;
+  background: #182540;
   color: #ffffff;
   padding: 20px 0 20px 0; }
   footer a {
