--- a/assets/css/welcome.css
+++ b/assets/css/welcome.css
@@ -109,8 +109,8 @@ h1 {
   font-weight: bold;
   margin-bottom: 0; }
 
-.first-fold {
-  margin-top: -65px; }
+/* .first-fold {
+  margin-top: -65px; } */
   .first-fold .sign-up-btn {
     width: 250px; }
 
