--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -30,3 +30,21 @@
     /* margin-top: -3px; */
     box-shadow: 0 5px 8px rgba(0, 0, 0, 0.1)
 }
+
+.card-user {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+.chart {
+  width: 100%; 
+  min-height: 500px;
+}
+
+.stats-box {
+    margin: 0.5rem !important;
+}
+
+.card-stats {
+    min-height: 600px;
+}
